--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   floor: ^1.4.2
   flutter_hooks: ^0.20.0
   cached_network_image: ^3.2.3
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
