--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   retrofit_generator: 3.0.1+1
-  floor_generator: ^1.2.0
-  build_runner: ^2.2.0
+  floor_generator: 1.2.0
+  build_runner: 2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
