--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,15 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.1.3
+  flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   get_it: ^7.6.0
   intl: ^0.18.1
   floor: ^1.4.2
-  flutter_hooks: ^0.20.0
-  cached_network_image: ^3.2.3
-  dio: ^4.0.6
-  retrofit: ^3.3.1
+  flutter_hooks: ^0.18.3
+  cached_network_image: ^3.2.0
+  dio: ^5.3.2
+  retrofit: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -52,9 +52,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  retrofit_generator: 3.0.1+1
-  floor_generator: 1.2.0
-  build_runner: 2.1.2
+  retrofit_generator: ^7.0.8
+  floor_generator: ^1.4.2
+  build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
